--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "openapi-directory-gulp",
+  "name": "openapi-directory",
   "version": "0.1.0-scripts-alpha-1",
   "devDependencies": {
     "@keyv/sqlite": "^1.2.12",
