--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-awspublish": "^3.2.0",
     "gulp-cli": "^1.4.0",
-    "gulp-help-doc": "^1.1.0",
     "gulp-if": "^2.0.2",
     "gulp-rename": "^1.2.2",
     "gulp-stats": "0.0.4",
@@ -53,12 +52,7 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "rollup": "^0.52.0",
-    "rollup-plugin-commonjs": "^8.2.6",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-uglify": "^2.0.1",
-    "rollup-plugin-uglify-es": "0.0.1"
+    "eslint-plugin-standard": "^3.0.1"
   },
   "private": true,
   "repository": {
@@ -66,9 +60,7 @@
     "url": "git://github.com/APIs-guru/openapi-directory.git"
   },
   "scripts": {
-    "lint": "eslint --fix --format node_modules/eslint-friendly-formatter bin/*.js lib/**/*.js plugins/**/*.js sources/**/*.js tasks/**/*.js gulpfile.js gulpfile.tasks.mjs",
-    "build": "rollup -c rollup.config.js gulpfile.tasks.mjs --output.format cjs --output.file gulpfile.tasks.js",
-    "watch": "rollup -c rollup.config.js gulpfile.tasks.mjs --output.format cjs --output.file gulpfile.tasks.js --watch"
+    "lint": "eslint --fix --format node_modules/eslint-friendly-formatter bin/*.js lib/**/*.js plugins/**/*.js sources/**/*.js tasks/**/*.js gulpfile.js gulpfile.tasks.mjs"
   },
   "@std/esm": {
     "esm": "js",
